--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,10 @@
 apply plugin: 'com.android.application'
 apply plugin: 'me.tatarka.retrolambda'
 
-
-
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.example.christina.avamedl"
+        applicationId "com.example.christina.researchsuitedemo"
         minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
@@ -25,23 +23,39 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
     //noinspection GradleCompatible
-    implementation 'com.android.support:appcompat-v7:26.1.0'
+//    implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'org.researchstack:backbone:1.1.2'
+    implementation 'org.researchstack:skin:1.1.2'
+    implementation 'net.zetetic:android-database-sqlcipher:3.5.4@aar'
+    implementation 'com.madgag.spongycastle:core:1.54.0.0'
+    implementation 'com.madgag.spongycastle:prov:1.54.0.0'
+    implementation 'com.madgag.spongycastle:pkix:1.54.0.0'
+    implementation 'edu.cornell.tech.foundry:sdl_rsx:0.1.1'
+    implementation 'edu.cornell.tech.foundry:sdl_rsx_rstbsupport:0.1.1'
+    implementation 'edu.cornell.tech.foundry:sdl_rsx_rsrpsupport:0.1.1'
+    implementation 'org.researchsuite:rstb:0.2.0'
+    implementation 'org.researchsuite:rsrp:0.2.0'
+    implementation 'com.curiosityhealth:ls2sdk:0.2.0'
+    implementation 'org.researchsuite:rsuiteextensionscore:0.2.0'
+    implementation 'org.researchsuite:rsuiteextensionsrstb:0.2.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    compile 'org.researchstack:backbone:1.1.2'
-    compile 'org.researchstack:skin:1.1.2'
-    compile 'net.zetetic:android-database-sqlcipher:3.5.4@aar'
-    compile 'com.madgag.spongycastle:core:1.54.0.0'
-    compile 'com.madgag.spongycastle:prov:1.54.0.0'
-    compile 'com.madgag.spongycastle:pkix:1.54.0.0'
-    compile 'edu.cornell.tech.foundry:sdl_rsx:0.0.7'
-    compile 'edu.cornell.tech.foundry:sdl_rsx_rstbsupport:0.0.1'
-    compile 'edu.cornell.tech.foundry:sdl_rsx_rsrpsupport:0.0.3'
-    compile 'edu.cornell.tech.foundry:sdl_rsx_rsrpohmagebackend:0.0.3'
     annotationProcessor 'co.touchlab.squeaky:squeaky-processor:0.4.0.0'
-    compile 'edu.cornell.tech.foundry:researchsuitetaskbuilder:0.0.5'
-    compile 'edu.cornell.tech.foundry:researchsuiteresultsprocessor:0.0.5'
+
+
+}
+
+configurations.all {
+    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+        def requested = details.requested
+        if (requested.group == 'com.android.support') {
+            if (!requested.name.startsWith("multidex")) {
+                details.useVersion '25.3.0'
+            }
+        }
+    }
 }
