--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,8 @@ dependencies {
     implementation 'org.researchsuite:rsuiteextensionsrstb:0.2.0'
     testImplementation 'junit:junit:4.12'
     annotationProcessor 'co.touchlab.squeaky:squeaky-processor:0.4.0.0'
+    compile project(':rsextensionsrstb')
+    compile project(':rsuiteextensionscore')
 
 
 }
